@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sanitize
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sanitize/ChangeLog,v 1.2 2014/03/26 06:47:19 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sanitize/ChangeLog,v 1.3 2014/03/28 09:19:22 graaff Exp $
+
+*sanitize-2.1.0 (28 Mar 2014)
+
+  28 Mar 2014; Hans de Graaff <graaff@gentoo.org> +sanitize-2.1.0.ebuild:
+  Version bump.
 
 *sanitize-2.0.6-r1 (26 Mar 2014)
 
